--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 *{
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+    font-family: 'Bebas Neue', cursive;
 }
 .app{
     width: 100vw;
@@ -14,11 +17,31 @@
 .contain{
     display: flex;
     flex-direction: column;
+    height: 100%;
+    justify-content: center;
 
+}
+h1{
+    font-size: 50px;
+    text-align: center;
+    line-height: 3rem;
+    color: rgba(0, 0, 0, 0.568);
+    margin-bottom: 30px;
 }
 .wapper{
     display: flex;
 }
 .numbers{
     margin-left: 10px;
+}
+
+.input{
+    height: 30px;
+    font-size: 20px;
+    padding-left: 5px;
+    margin-bottom: 10px;
+}
+
+.contador,.numbers{
+    color: rgba(0, 0, 0, 0.568);
 }
